@@ -1,2 +1,0 @@
-org.spockframework.mock.FinalClassDefaultValueProvider
-org.spockframework.smoke.mock.MaybeDefaultValueProvider
